--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li class="mobile-dropdown">
                     <a href="about.html" class="mobile-nav-link">About Us <i class="fas fa-chevron-down"></i></a>
                     <div class="mobile-dropdown-content">
-                        <a href="#our-culture">Our Culture</a>
+                        <a href="culture.html">Our Culture</a>
                     </div>
                 </li>
                 <li class="mobile-dropdown">
@@ -52,9 +52,9 @@
                         <a href="#skin-on-fries">Skin on Fries</a>
                     </div>
                 </li>
-                <li><a href="#seedtoshelf" class="mobile-nav-link">Seed to Shelf</a></li>
-                <li><a href="#exports" class="mobile-nav-link">Exports</a></li>
-                <li><a href="#recipes" class="mobile-nav-link">Recipes</a></li>
+                <li><a href="seedtoshelf.html" class="mobile-nav-link">Seed to Shelf</a></li>
+                <li><a href="Exports.html" class="mobile-nav-link">Exports</a></li>
+                <li><a href="Recipes.html" class="mobile-nav-link">Recipes</a></li>
             </ul>
         </nav>
     </div>
@@ -73,7 +73,7 @@
                     <li class="dropdown">
                         <a href="about.html">About Us <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
-                            <a href="#our-culture">Our Culture</a>
+                            <a href="culture.html">Our Culture</a>
                         </div>
                     </li>
                     <li class="dropdown">
@@ -85,15 +85,12 @@
                             <a href="#skin-on-fries">Skin on Fries</a>
                         </div>
                     </li>
-                    <li><a href="#seedtoshelf">Seed to Shelf</a></li>
-                    <li><a href="#exports">Exports</a></li>
-                    <li><a href="#recipes">Recipes</a></li>
+                    <li><a href="seedtoshelf.html">Seed to Shelf</a></li>
+                    <li><a href="Exports.html">Exports</a></li>
+                    <li><a href="Recipes.html">Recipes</a></li>
                 </ul>
             </nav>
-            <div class="cart-account">
-                <a href="#cart" title="Cart"><i class="fas fa-shopping-cart"></i></a>
-                <a href="#account" title="My Account"><i class="fas fa-user-circle"></i></a>
-            </div>
+            <!-- Cart/Account icons removed -->
         </div>
     </header>
 
@@ -255,18 +252,18 @@
     </section>
 
     <!-- Esteemed Clientele -->
-<section class="clients section-bg">
-    <div class="bg-pattern bg-pattern-2"></div>
-    <div class="container">
-        <div class="section-title">
-            <h2>Our Esteemed Clientele</h2>
-            <p>Trusted by the biggest global brands in over 40 countries</p>
-            <div class="title-accent"></div>
-        </div>
+    <section class="clients section-bg">
+        <div class="bg-pattern bg-pattern-2"></div>
+        <div class="container">
+            <div class="section-title">
+                <h2>Our Esteemed Clientele</h2>
+                <p>Trusted by the biggest global brands in over 40 countries</p>
+                <div class="title-accent"></div>
+            </div>
 
-        <div class="logos-scroll-container">
-            <div class="logos-track" id="clienteleTrack">
-                <!-- McDonalds -->
+            <div class="logos-scroll-container">
+                <div class="logos-track" id="clienteleTrack">
+                     <!-- McDonalds -->
                 <div class="logo-scroll-item">
                     <img src="./assets/image/BK.jpg" 
                          alt="McDonalds" 
@@ -353,24 +350,24 @@
                          class="client-logo" 
                          loading="eager">
                 </div>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- Retail Partners -->
-<section class="partners section-bg">
-    <div class="bg-pattern bg-pattern-3"></div>
-    <div class="container">
-        <div class="section-title">
-            <h2>Our Retail Partners</h2>
-            <p>Available at leading retail chains worldwide</p>
-            <div class="title-accent"></div>
-        </div>
+    <!-- Retail Partners -->
+    <section class="partners section-bg">
+        <div class="bg-pattern bg-pattern-3"></div>
+        <div class="container">
+            <div class="section-title">
+                <h2>Our Retail Partners</h2>
+                <p>Available at leading retail chains worldwide</p>
+                <div class="title-accent"></div>
+            </div>
 
-        <div class="logos-scroll-container">
-            <div class="logos-track" id="partnersTrack">
-                <!-- Walmart -->
+            <div class="logos-scroll-container">
+                <div class="logos-track" id="partnersTrack">
+                    <!-- Walmart -->
                 <div class="logo-scroll-item">
                     <img src="./assets/image/Dmart.png" 
                          alt="Walmart" 
@@ -457,10 +454,11 @@
                          class="client-logo" 
                          loading="lazy">
                 </div>
+
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
     <!-- Footer -->
     <footer id="connect">
@@ -477,10 +475,11 @@
                 <div class="footer-column">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">About Us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="seedtoshelf.html">seed to shelf</a></li>
                         <li><a href="#products">Products</a></li>
-                        <li><a href="#events">News & Events</a></li>
+                        <li><a href="Exports.html">Exports</a></li>
                         <li><a href="#recipes">Recipes</a></li>
                         <li><a href="#connect">Connect With Us</a></li>
                     </ul>
