--- a/products.html
+++ b/products.html
@@ -57,6 +57,7 @@
                 <li><a href="seedtoshelf.html" class="mobile-nav-link">Seed to Shelf</a></li>
                 <li><a href="Exports.html" class="mobile-nav-link">Exports</a></li>
                 <li><a href="Recipes.html" class="mobile-nav-link">Recipes</a></li>
+                <li><a href="order.html" class="mobile-nav-link">Order Now😋</a></li>
                 <li><a href="connect.html" class="mobile-nav-link">Connect</a></li>
             </ul>
         </nav>
@@ -92,6 +93,7 @@
                     <li><a href="seedtoshelf.html">Seed to Shelf</a></li>
                     <li><a href="Exports.html">Exports</a></li>
                     <li><a href="Recipes.html">Recipes</a></li>
+                    <li><a href="order.html">Order Now😋</a></li>
                     <li><a href="connect.html">Connect</a></li>
                 </ul>
             </nav>
@@ -962,7 +964,7 @@
                 <div class="catalog-text">
                     <h2>Download Our Product Catalog</h2>
                     <p>Get complete details about all our products, specifications, and packaging options</p>
-                    <a href="#" class="btn btn-catalog">
+                    <a href="./assets/hyfun_Brochure.pdf" class="btn btn-catalog">
                         <i class="fas fa-download"></i>
                         Download Catalog (PDF)
                     </a>
@@ -989,13 +991,15 @@
                 <div class="footer-column">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                       <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="seedtoshelf.html">seed to shelf</a></li>
-                        <li><a href="#products">Products</a></li>
+                        <li><a href="products.html">Products</a></li>
                         <li><a href="Exports.html">Exports</a></li>
                         <li><a href="Recipes.html">Recipes</a></li>
-                        <li><a href="#connect">Connect With Us</a></li>
+                        <li><a href="order.html">Order Now😋</a></li>
+                        <li><a href="connect.html">Connect With Us</a></li>
+                        <li><a href="culture.html">Our Culture</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
