--- a/seedtoshelf.html
+++ b/seedtoshelf.html
@@ -56,6 +56,8 @@
                 <li><a href="seedtoshelf.html" class="mobile-nav-link active">Seed to Shelf</a></li>
                 <li><a href="Exports.html" class="mobile-nav-link">Exports</a></li>
                 <li><a href="Recipes.html" class="mobile-nav-link">Recipes</a></li>
+                <li><a href="order.html" class="mobile-nav-link">Order Now😋</a></li>
+                <li><a href="connect.html" class="mobile-nav-link">Connect</a></li>
             </ul>
         </nav>
     </div>
@@ -89,6 +91,8 @@
                     <li><a href="seedtoshelf.html" class="active">Seed to Shelf</a></li>
                     <li><a href="Exports.html">Exports</a></li>
                     <li><a href="Recipes.html">Recipes</a></li>
+                    <li><a href="order.html">Order Now😋</a></li>
+                    <li><a href="connect.html">Connect</a></li>
                 </ul>
             </nav>
         </div>
@@ -591,10 +595,12 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="seedtoshelf.html">seed to shelf</a></li>
-                        <li><a href="#products">Products</a></li>
+                        <li><a href="products.html">Products</a></li>
                         <li><a href="Exports.html">Exports</a></li>
                         <li><a href="Recipes.html">Recipes</a></li>
-                        <li><a href="#connect">Connect With Us</a></li>
+                        <li><a href="order.html">Order Now😋</a></li>
+                        <li><a href="connect.html">Connect With Us</a></li>
+                        <li><a href="culture.html">Our Culture</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
