--- a/Recipes.html
+++ b/Recipes.html
@@ -66,6 +66,7 @@
                         <a href="#video-recipes">Video Recipes</a>
                     </div>
                 </li>
+                <li><a href="order.html" class="mobile-nav-link">Order Now😋</a></li>
                 <li><a href="connect.html" class="mobile-nav-link">Connect</a></li>
             </ul>
         </nav>
@@ -109,6 +110,7 @@
                             <a href="#video-recipes">Video Recipes</a>
                         </div>
                     </li>
+                    <li><a href="order.html">Order Now😋</a></li>
                     <li><a href="connect.html">Connect</a></li>
                 </ul>
             </nav>
@@ -1574,11 +1576,13 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
-                        <li><a href="seedtoshelf.html">Seed to Shelf</a></li>
+                        <li><a href="seedtoshelf.html">seed to shelf</a></li>
                         <li><a href="products.html">Products</a></li>
-                        <li><a href="exports.html">Exports</a></li>
-                        <li><a href="recipes.html">Recipes</a></li>
-                        <li><a href="#connect">Connect With Us</a></li>
+                        <li><a href="Exports.html">Exports</a></li>
+                        <li><a href="Recipes.html">Recipes</a></li>
+                        <li><a href="order.html">Order Now😋</a></li>
+                        <li><a href="connect.html">Connect With Us</a></li>
+                        <li><a href="culture.html">Our Culture</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
