--- a/culture.html
+++ b/culture.html
@@ -546,7 +546,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 HyFun Foods. All rights reserved. | Building a Culture of Excellence | Made with <i class="fas fa-heart" style="color: #ff4757;"></i></p>
+                <p>&copy; 2026 R15 All rights reserved. | Potatoes for the World | Made with <i class="fas fa-heart" style="color: #ff4757;"></i></p>
             </div>
         </div>
     </footer>
