--- a/products.html
+++ b/products.html
@@ -1026,7 +1026,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 HyFun Foods. All rights reserved. | Potatoes for the World | Made with <i
+                <p>&copy; 2026 R15 All rights reserved. | Potatoes for the World | Made with <i
                         class="fas fa-heart" style="color: #ff4757;"></i></p>
             </div>
         </div>
