--- a/seedtoshelf.html
+++ b/seedtoshelf.html
@@ -625,7 +625,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 HyFun Foods. All rights reserved. | Potatoes for the World | Made with <i class="fas fa-heart" style="color: #ff4757;"></i></p>
+                <p>&copy; 2026 R15 All rights reserved. | Potatoes for the World | Made with <i class="fas fa-heart" style="color: #ff4757;"></i></p>
             </div>
         </div>
     </footer>
